# cliplin

./: .gitignore  README.md  pyproject.toml
docs/adrs/: 001-cli-implementation-patterns.md
docs/features/: cli.feature  tool.feature
docs/ts4/: cliplin-cli-stack.ts4  windows-encoding-handling.ts4
src/cliplin/: __init__.py  __main__.py  cli.py
src/cliplin/commands/: __init__.py  feature.py  init.py  reindex.py  tool.py  validate.py
src/cliplin/tools/: tools.yaml  tools.yaml.example
src/cliplin/tools/ui-intent/: app.js  index.html
src/cliplin/utils/: __init__.py  chromadb.py  templates.py  tools.py
